Modify header to give links correct spacing

--- a/style.css
+++ b/style.css
@@ -1,4 +1,44 @@
 body {
     display: flex;
     flex-direction: column;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
+.hero {
+    background-color: #1F2937;
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+}
+
+/* .header, .hero-main {
+    margin-left: 48px;
+    margin-right: 48px;
+} */
+
+.logo {
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: bold;
+    margin-right: auto;
+}
+
+.header {
+    list-style-type: none;
+    margin: 0;
+    padding: 16px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 24px;
+}
+
+a {
+    text-decoration: none;
+    color: #e5e7eb;
 }
